<resources>
    <string name="app_name">Android Debug Assistant</string>
    <string name="text_aid">Android ID:</string>
    <string name="toast_aid_failed">Get Android ID failed.</string>
    <string name="button_copy">Copy</string>
    <string name="text_cpu_abi">CPU ABI:</string>
    <string name="toast_copy">Android ID has been copied to clipboard.</string>
    <string name="toast_copy_failed">Copy Android ID failed.</string>
    <string name="text_notice">Click buttons below to request permissions.</string>
    <string name="button_request_usage">Usage Permission Setting</string>
    <string name="button_request_float">Float Permission Setting</string>
    <string name="button_app_setting">Application Setting</string>
    <string name="button_batteryopt_setting">Battery Optimization Setting</string>
    <string name="button_request_batteryopt">Request Ignore Battery Optimization</string>
    <string name="failed_start_activity">No permission setting found.</string>
    <string name="title_accounts">Accounts</string>
    <string name="text_show_accounts">Click button below to view account info.</string>
    <string name="button_show_accounts">Show Accounts</string>
    <string name="text_no_account">Cannot find any account in system.</string>
    <string name="text_no_permission_to_get_account">No permission to get accounts.</string>
    <string name="button_request_account_permission">Try Again</string>
    <string name="button_sync_setting">Sync Setting</string>
</resources>
